Fixed styling of add item menu, including addition of perfect scrollbar

--- a/coord/src/add-item-menu/add-item-menu.component.css
+++ b/coord/src/add-item-menu/add-item-menu.component.css
@@ -14,7 +14,7 @@
 }
 
 #sidebar{
-    height: 100%; 
+    height: 92vh; 
     width: 20%; 
     position: fixed; 
     left: 0px; 
@@ -22,7 +22,13 @@
     transition: left ease-out .55s; 
     border-top: 4px solid var(--purple-dark);
     padding: 8px; 
-    overflow: auto; 
+    overflow: hidden; 
+}
+
+@media screen and (max-width: 868px){
+    #sidebar{
+        width: 35%; 
+    }
 }
 
 #sidebar h3{
@@ -41,7 +47,7 @@
     padding: 3px; 
 }
 
-#url-input{
+#url-entry{
     justify-content: space-between;
     align-items: center;
     width: 100%; 
