--- a/coord/src/product-img-card/product-img-card.component.css
+++ b/coord/src/product-img-card/product-img-card.component.css
@@ -6,3 +6,17 @@
     width: 150px; 
     height: 150px; 
 }
+
+@media screen and (max-width: 515px){
+    .img-container img{
+        width: 100px; 
+        height: 100px; 
+    }
+}
+
+@media screen and (max-width: 350px){
+    .img-container img{
+        width: 80px; 
+        height: 80px; 
+    }
+}
